--- a/directories/people/team/people.html
+++ b/directories/people/team/people.html
@@ -22,7 +22,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='0'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='0'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/aabella' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -56,7 +56,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='1'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='1'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/gernot-boege-4204a2226/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -87,7 +87,7 @@
                     <div class='department'>Community Dev Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='2'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='2'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/vera-b%C3%B6hner-88a39693/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -118,7 +118,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='3'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='3'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/dncampo' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -152,7 +152,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='4'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='4'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/jicarreterogu' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -186,7 +186,7 @@
                     <div class='department'>BoO</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='5'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='5'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/challagonda' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -220,7 +220,7 @@
                     <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='6'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='6'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/kseniia-chernikova-184553211/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -251,7 +251,7 @@
                     <div class='department'>Admin Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='7'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='7'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/viktoryia-danilenko-b664a62a8/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -282,7 +282,7 @@
                     <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='8'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='8'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/giacomodepanfilis/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -313,7 +313,7 @@
                     <div class='department'>Operations Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='9'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='9'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/depa01' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -347,7 +347,7 @@
                     <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='10'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='10'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/lorenzoderitis/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -378,7 +378,7 @@
                     <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='11'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='11'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/sandi-dushkaj-700316272' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -409,7 +409,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='12'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='12'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/rihabfeki' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -440,7 +440,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='13'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='13'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/jason-fox-8a79563/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -471,7 +471,7 @@
                     <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='14'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='14'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://de.linkedin.com/in/antje-kelly-222b1a262' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -502,7 +502,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='15'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='15'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/luka-keseri%C4%8D-426164260/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -533,7 +533,7 @@
                     <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='16'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='16'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/korneev-oleg-projectmanager' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -564,7 +564,7 @@
                     <div class='department'>Community Dev Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='17'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='17'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/char_kotterman' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -598,7 +598,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='18'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='18'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/yuzhen-li-b242421a4/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -629,7 +629,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='19'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='19'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/flopezaguilar' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -663,7 +663,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='20'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='20'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/franmelfer/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -694,7 +694,7 @@
                     <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='21'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='21'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/xhulja-melyshi-273b66211/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -725,7 +725,7 @@
                     <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='22'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='22'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/lmontandon' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -759,7 +759,7 @@
                     <div class='department'>BoO</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='23'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='23'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/clara-pezuela-2b1257/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -790,7 +790,7 @@
                     <div class='department'>Operations Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='24'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='24'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/eprieto/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -821,7 +821,7 @@
                     <div class='department'>Community Dev Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='25'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='25'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/tonia-sapia-a171bb63/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -852,7 +852,7 @@
                     <div class='department'>Comms Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='26'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='26'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/lauraskip/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -883,7 +883,7 @@
                     <div class='department'>Operations Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='27'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='27'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/cecilia-setter-72411a1b3/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -914,7 +914,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='28'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='28'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/tim-smyth-26225b12a' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -945,7 +945,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='29'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='29'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/asma-taamallah/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -976,7 +976,7 @@
                     <div class='department'>Operations Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='30'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='30'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/%C3%A1ngeles-tejado-s%C3%A1nchez-2a61b411/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -1007,7 +1007,7 @@
                     <div class='department'>Tech Team</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='31'><span class='icon bio'></span></a>
+                    <a href="#" class='cat-bio' data-modal='31'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/kzangeli/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
