--- a/directories/people/msc/people.html
+++ b/directories/people/msc/people.html
@@ -1,4 +1,4 @@
-    <div
+    <div id='item-0'
         class='grid-item
             tritux
             tunisia
@@ -37,7 +37,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-1'
         class='grid-item
             engineering
             italy
@@ -61,7 +61,7 @@
                     <div class='chip-domain'>Smart Energy</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='1'><span class='icon bio'></span></a>
+                    <a href="#item-1" class='cat-bio' data-modal='1'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/massimo-bertoncini-a9a7932/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -74,7 +74,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-2'
         class='grid-item
             nttdata
             spain
@@ -98,7 +98,7 @@
                     <div class='chip-domain'>Smart Water</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='2'><span class='icon bio'></span></a>
+                    <a href="#item-2" class='cat-bio' data-modal='2'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://mobile.twitter.com/ac_olite' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -114,7 +114,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-3'
         class='grid-item
             teamdev
             italy
@@ -138,7 +138,7 @@
                     <div class='chip-domain'>Smart AgriFood</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='3'><span class='icon bio'></span></a>
+                    <a href="#item-3" class='cat-bio' data-modal='3'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/kokkete' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -154,7 +154,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-4'
         class='grid-item
             engineering
             italy
@@ -178,7 +178,7 @@
                     <div class='chip-domain'>Smart Cities</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='4'><span class='icon bio'></span></a>
+                    <a href="#item-4" class='cat-bio' data-modal='4'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/robertodibernardo/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -191,7 +191,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-5'
         class='grid-item
             eppo
             germany
@@ -230,7 +230,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-6'
         class='grid-item
             city-of-herne
             germany
@@ -254,7 +254,7 @@
                     <div class='chip-domain'>Smart Cities</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='6'><span class='icon bio'></span></a>
+                    <a href="#item-6" class='cat-bio' data-modal='6'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/pierre-golz-311396156/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -267,7 +267,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-7'
         class='grid-item
             hopu---libelium
             spain
@@ -291,7 +291,7 @@
                     <div class='chip-domain'>Smart Cities</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='7'><span class='icon bio'></span></a>
+                    <a href="#item-7" class='cat-bio' data-modal='7'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/antonio_jara' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -307,7 +307,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-8'
         class='grid-item
             nec-lab-europe
             germany
@@ -331,7 +331,7 @@
                     <div class='chip-domain'>Smart Industry</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='8'><span class='icon bio'></span></a>
+                    <a href="#item-8" class='cat-bio' data-modal='8'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/ern%C3%B6-kovacs-1459041/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -344,7 +344,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-9'
         class='grid-item
             ciudades-del-futuro
             argentina
@@ -368,7 +368,7 @@
                     <div class='chip-domain'>iHubs</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='9'><span class='icon bio'></span></a>
+                    <a href="#item-9" class='cat-bio' data-modal='9'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/gonzalolarosa/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -381,7 +381,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-10'
         class='grid-item
             easy-global-market
             france
@@ -405,7 +405,7 @@
                     <div class='chip-domain'>Smart Water</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='10'><span class='icon bio'></span></a>
+                    <a href="#item-10" class='cat-bio' data-modal='10'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/franck_le_gall' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -421,7 +421,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-11'
         class='grid-item
             engineering
             italy
@@ -445,7 +445,7 @@
                     <div class='chip-domain'>Smart Industry</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='11'><span class='icon bio'></span></a>
+                    <a href="#item-11" class='cat-bio' data-modal='11'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/angmarguglio' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -461,7 +461,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-12'
         class='grid-item
             hochschule-bochum
             germany
@@ -485,7 +485,7 @@
                     <div class='chip-domain'>Smart Energy</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='12'><span class='icon bio'></span></a>
+                    <a href="#item-12" class='cat-bio' data-modal='12'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/haydarmecit/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -498,7 +498,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-13'
         class='grid-item
             rwth-aachen-university
             germany
@@ -522,7 +522,7 @@
                     <div class='chip-domain'>Smart Energy</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='13'><span class='icon bio'></span></a>
+                    <a href="#item-13" class='cat-bio' data-modal='13'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/antonellomonti/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -535,7 +535,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-14'
         class='grid-item
             engineering
             italy
@@ -559,7 +559,7 @@
                     <div class='chip-domain'>Smart Water</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='14'><span class='icon bio'></span></a>
+                    <a href="#item-14" class='cat-bio' data-modal='14'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/davidestorelli/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -572,7 +572,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-15'
         class='grid-item
             atb-bremen
             germany
@@ -596,7 +596,7 @@
                     <div class='chip-domain'>Smart AgriFood</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='15'><span class='icon bio'></span></a>
+                    <a href="#item-15" class='cat-bio' data-modal='15'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/HSundmaeker' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
