--- a/directories/people/bod/people.html
+++ b/directories/people/bod/people.html
@@ -1,4 +1,4 @@
-    <div
+    <div id='item-0'
         class='grid-item
             secmotic
             spain
@@ -22,7 +22,7 @@
                     <div class='chip-domain'>Gold</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='0'><span class='icon bio'></span></a>
+                    <a href="#item-0" class='cat-bio' data-modal='0'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/josesecmotic' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -38,7 +38,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-1'
         class='grid-item
             ficodes
             spain
@@ -61,7 +61,7 @@
                 </a>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='1'><span class='icon bio'></span></a>
+                    <a href="#item-1" class='cat-bio' data-modal='1'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/frandlvega' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -77,7 +77,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-2'
         class='grid-item
             meditech
             italy
@@ -101,7 +101,7 @@
                     <div class='chip-domain'>Gold</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='2'><span class='icon bio'></span></a>
+                    <a href="#item-2" class='cat-bio' data-modal='2'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/dirgenmeditech' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -117,7 +117,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-3'
         class='grid-item
             hopu---libelium
             spain
@@ -141,7 +141,7 @@
                     <div class='chip-domain'>Gold</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='3'><span class='icon bio'></span></a>
+                    <a href="#item-3" class='cat-bio' data-modal='3'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/antonio_jara' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -157,7 +157,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-4'
         class='grid-item
             madinah-region-development-authority
             saudi-arabia
@@ -181,7 +181,7 @@
                     <div class='chip-domain'>Platinum</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='4'><span class='icon bio'></span></a>
+                    <a href="#item-4" class='cat-bio' data-modal='4'><span class='icon bio'></span></a>
                     <a class='cat-linkedin' target='_blank' href='https://www.linkedin.com/in/abdulmajeedsaud/' rel='noopener'><span
                             class='icon linkedin'
                         ></span></a>
@@ -194,7 +194,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-5'
         class='grid-item
             atos
             france
@@ -218,7 +218,7 @@
                     <div class='chip-domain'>Platinum</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='5'><span class='icon bio'></span></a>
+                    <a href="#item-5" class='cat-bio' data-modal='5'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/pierrylmassal' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -234,7 +234,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-6'
         class='grid-item
             nec
             japan
@@ -258,7 +258,7 @@
                     <div class='chip-domain'>Platinum</div>
             </div>
             <div class='icons'>
-                    <a class='cat-bio' data-modal='6'><span class='icon bio'></span></a>
+                    <a href="#item-6" class='cat-bio' data-modal='6'><span class='icon bio'></span></a>
                     <a class='cat-twitter' target='_blank' href='https://twitter.com/yasunorimochiz' rel='noopener'><span
                             class='icon twitter'
                         ></span></a>
@@ -274,7 +274,7 @@
             </div>
         </div>
     </div>
-    <div
+    <div id='item-7'
         class='grid-item
             addix
             germany
